import 'package:async_redux/async_redux.dart';
import 'package:flutter/material.dart';
import 'package:redux_comp/redux_comp.dart';
import './job_listings.dart';

class ConsumerDetails extends StatelessWidget {
  ///const Login({Key? key}) : super(key: key);
  final Store<AppState> store;
  const ConsumerDetails({Key? key, required this.store}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return StoreProvider<AppState>(
...
                      ),
                      elevation: 2,
                      child: Column(
                        children: [
                          const ListTile(
                            title: Text(
                              "Description",
                              style: TextStyle(
                                  fontSize: 25.0, color: Colors.white),
                            ),
                          ),
                          Padding(
                            padding: const EdgeInsets.fromLTRB(10, 0, 10, 10),
...
